--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0",
     "vite": "^4.0.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && rm -rf docs && mv dist docs && echo 'www.sylvaintremblay.com' > docs/CNAME && cp docs/index.html docs/404.html && git add docs && git commit -m 'Deploy site' || echo '(no changes)' && git push"
   }
 }
